--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 copyright">
-          <p>© 2025 Spark. All rights reserved.</p>
+          <p>© 2025 Clint. All rights reserved.</p>
         </div>
         <div class="col-md-6 credit-link text-start text-md-end">
           <p>Free HTML Template by <a href="https://templatesjungle.com/">TemplatesJungle</a></p>
@@ -1593,6 +1593,7 @@
     crossorigin="anonymous"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
+  <script src='https://calvinclinton-team.myfreshworks.com/crm/sales/web_forms/d922ab93feb61d9ae8c2016287295287d2ea913973ad1611916533d1c100e7b2/form.js' crossorigin='anonymous' id='fs_d922ab93feb61d9ae8c2016287295287d2ea913973ad1611916533d1c100e7b2'></script>
 </body>
 
 </html>
